# agentic-engineering

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SETUP.md  SOURCES.md
apps/codespaces/: README.md
apps/codespaces/.devcontainer/: devcontainer.json  post-create.sh
apps/kb-server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/kb-server/docs/: capabilities.md  setup-guide.md
apps/kb-server/src/: auth.py  config.py  db.py  models.py  server.py  storage.py  sync.py
apps/kb-server/tests/: test_server.py
apps/slack-trigger/: README.md
examples/sample-project/: .mcp.json  CLAUDE.md
examples/seed-kb/: what-a-great-kb-doc-looks-like.md
examples/seed-kb/architecture/: api-design.md  testing-strategy.md
examples/seed-kb/coding-standards/: python-guidelines.md  typescript-guidelines.md
examples/seed-kb/workflows/: pr-conventions.md
guides/: 01-philosophy.md  02-workflow.md  03-knowledge-base.md  04-compound-loop.md  05-stacked-prs.md  06-review-bots.md  07-observability.md  08-anyone-can-ship.md  09-review-constrained.md  10-team-rollout.md  11-measuring-success.md  12-proof.md  13-faq.md  14-cost-and-roi.md  15-sub-agents.md  16-writing-great-agent-instructions.md  17-people-process.md  18-trust-ci.md
ideas/: shared-knowledge-graph.md
integrations/: README.md
integrations/review-bot/: README.md
skills/: README.md  install.sh
skills/analysis/adversarial/: SKILL.md
skills/analysis/gh-summary/: SKILL.md
skills/analysis/spec/: SKILL.md
skills/hooks/: README.md
templates/: AGENTS.md.template  CLAUDE.md.template
(+36 files in other folders)
